# OpenWeatherAPI_ssd202x

./: CMakeLists.txt
db/: weather_data.json
main/: main.cpp
